fix: fix inconsistent animation and horizontal scrollbar issue

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -56,17 +56,19 @@ body {
 
 .table-list {
   .action-btn {
+    visibility: hidden;
+    display: inline-flex;
     transition: all 0.3s ease-in-out;
     opacity: 0;
     transform-origin: center;
-    transform: translateX(10%);
+    transform: scale(0);
   }
 
   tr:hover {
     .action-btn {
       visibility: visible;
       opacity: 1;
-      transform: translateX(0%);
+      transform: scale(1);
     }
   }
 }
